# modrinth-cli

./: Cargo.toml  README.md  mods.json
src/: main.rs  structs.rs
