[package]
name = "modrinth-cli"
description = "unofficial modrinth cli interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.18.0", features = ["json"] }
colored = "2.0.0"
inquire = "0.2.1"
pbr = "1.0.4"
semver = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"

[profile.release]
opt-level = 'z'
lto = true

